fixed z-index of next/prev chapter links

--- a/src/features/Bible/organisms/Chapter.module.scss
+++ b/src/features/Bible/organisms/Chapter.module.scss
@@ -12,6 +12,7 @@
   color: black;
   user-select: none;
   padding-top: 35vh;
+  z-index: 20;
 
   span {
     position: sticky;
